<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginStart="15dp"
    android:layout_marginEnd="15dp"
    tools:context=".submitreviews.SubmitReviewFragment">

    <TextView
        android:id="@+id/selected_package_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:gravity="center"
        android:text="En man som heter Ove (2015)"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/your_rating"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="3dp"
        android:textSize="18sp"
        android:gravity="center"/>

    <RatingBar
        android:id="@+id/review_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:progressTint="@color/colorAccent"
        android:numStars="5"
        android:stepSize="1.0"
        android:rating="0"
        android:layout_gravity="center"/>

    <View style="@style/Divider"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@color/lightGrey"/>

    <EditText
        android:id="@+id/review_edit_text"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.8"
        android:inputType="textMultiLine"
        android:gravity="top"
        android:hint="@string/text_leave_review"
        android:layout_marginTop="15dp"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:background="@null"


        android:scrollHorizontally="false"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        android:scrollbarStyle="insideInset"
        android:scrollbars="vertical"
        android:overScrollMode="always"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center|bottom">

        <Button
            android:id="@+id/cancel_review_button"
            style="@style/ReviewButtonStyle"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/submit_review_button"
            style="@style/ReviewButtonStyle"
            android:layout_alignParentEnd="true"
            android:text="@string/submit"/>

    </RelativeLayout>



</LinearLayout>